--- a/gccp-front/index.html
+++ b/gccp-front/index.html
@@ -25,8 +25,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th>1</th>
-                        <th>ola</th>
+                        <th id="id">1</th>
+                        <th id="msg">ola</th>
                     </tr>
                 </tbody>
             </table>
