--- a/gccp-front/index.html
+++ b/gccp-front/index.html
@@ -15,6 +15,7 @@
 
         <div id="container">
             <input type="text" id="msg" placeholder="insert your message">
+            <button id="insert" onclick="send(Event)">send</button>
 
             <table>
                 <thead>
@@ -25,8 +26,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th id="id">1</th>
-                        <th id="msg">ola</th>
+                        <td id="id"></td>
+                        <td id="msgServe"></td>
                     </tr>
                 </tbody>
             </table>
